--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ProductDetailActivity"
-    android:background="@color/light_gray">
+    android:background="@drawable/cell">
 
     <RelativeLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/light_gray1">
+        android:background="@color/light_gray">
 
         <ImageButton
             android:id="@+id/home_button"
@@ -42,40 +42,17 @@
             android:layout_marginStart="140dp"
             android:onClick="onBack"/>
 
-        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
-            android:id="@+id/btnPress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:corner_radius="10dp"
-            android:background="@color/blue"
+        <ImageView
+            android:id="@+id/img_Press"
+            android:layout_width="330sp"
+            android:layout_height="140sp"
+            android:src="@drawable/press_here"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="30dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/txtPress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="PRESS HERE"
-                android:textSize="40sp"
-                android:textColor="@android:color/white"
-                android:textAlignment="center"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/txtFindBrash"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TO FIND\nYOUR BRUSH"
-                android:textSize="25sp"
-                android:textColor="@android:color/white"
-                android:textAlignment="center"
-                android:gravity="center_vertical"/>
-
-        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
+            android:layout_alignParentBottom="true"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -192,7 +169,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_layout"
         android:layout_below="@+id/top_layout"
-        android:background="@color/light_gray1">
+        android:background="@color/light_gray">
 
         <LinearLayout
             android:layout_width="match_parent"
