--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,14 +15,23 @@
     <style name="PopupMenu" parent="@android:style/Widget.PopupMenu">
         <item name="android:popupBackground">@android:color/white</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:divider">@color/drak_gray</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
     <style name="myPopupMenuTextAppearanceSmall" parent="@android:style/TextAppearance.DeviceDefault.Widget.PopupMenu.Small">
         <item name="android:textSize">20sp</item>
+        <item name="android:divider">@color/drak_gray</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
     <style name="myPopupMenuTextAppearanceLarge" parent="@android:style/TextAppearance.DeviceDefault.Widget.PopupMenu.Large">
         <item name="android:textSize">20sp</item>
+        <item name="android:divider">@color/drak_gray</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
 </resources>
